--- a/custom_components/defa_power/manifest.json
+++ b/custom_components/defa_power/manifest.json
@@ -1,5 +1,7 @@
 {
-  "codeowners": ["@bebbssos"],
+  "codeowners": [
+    "@Bebbssos"
+  ],
   "config_flow": true,
   "dependencies": [],
   "documentation": "https://github.com/Bebbssos/ha-defa-power",
@@ -7,5 +9,5 @@
   "iot_class": "cloud_polling",
   "name": "DEFA Power",
   "requirements": [],
-  "version": "0.0.1"
+  "version": "0.1.0"
 }
