--- a/custom_components/defa_power/manifest.json
+++ b/custom_components/defa_power/manifest.json
@@ -1,13 +1,11 @@
 {
-  "codeowners": [
-    "@Bebbssos"
-  ],
+  "domain": "defa_power",
+  "name": "DEFA Power",
+  "codeowners": ["@Bebbssos"],
   "config_flow": true,
   "dependencies": [],
   "documentation": "https://github.com/Bebbssos/ha-defa-power",
-  "domain": "defa_power",
   "iot_class": "cloud_polling",
-  "name": "DEFA Power",
   "requirements": [],
   "version": "0.2.0"
 }
