CloudCharge enum values are now snake_case, entities now reads value using value function, removed unused code, added issue_tracker to manifest.json

--- a/custom_components/defa_power/manifest.json
+++ b/custom_components/defa_power/manifest.json
@@ -6,6 +6,7 @@
   "dependencies": [],
   "documentation": "https://github.com/Bebbssos/ha-defa-power",
   "iot_class": "cloud_polling",
+  "issue_tracker": "https://github.com/Bebbssos/ha-defa-power/issues",
   "requirements": [],
-  "version": "0.3.2"
+  "version": "0.3.3"
 }
