--- a/custom_components/defa_power/manifest.json
+++ b/custom_components/defa_power/manifest.json
@@ -8,5 +8,5 @@
   "iot_class": "cloud_polling",
   "issue_tracker": "https://github.com/Bebbssos/ha-defa-power/issues",
   "requirements": [],
-  "version": "0.3.5"
+  "version": "0.3.5b2"
 }
